objects/Case.object
<CustomObject>
    <fields>
        <fullName>Invoice_delivery_Email__c</fullName>
        <inlineHelpText>Insert new Invoice Delivery Email.</inlineHelpText>
        <label>Invoice Delivery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsNewRecord__c</fullName>
        <label>IsNewRecord</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Org_ID__c</fullName>
        <description>To be used in Service Cases with Type Invoicing. (LMS Org ID)</description>
        <formula>Account.SABA_LMS_Code__c</formula>
        <inlineHelpText>Enter LMS Organization ID - required if Delivery Channel is Training.</inlineHelpText>
        <label>LMS Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTP_Access_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LTP Access Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTP_Name__c</fullName>
        <label>LTP Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTP_SID__c</fullName>
        <label>LTP SID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTP_url__c</fullName>
        <label>LTP url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Case_Update_Time_Date__c</fullName>
        <description>This field is to show the last time a case was edited, new email came in or new case comment was added. This will be used in the 24 hour time SLA field.</description>
        <label>Last Case Update Time/Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Queue_Owner__c</fullName>
        <description>This field is used only for Case Email Routing Logic &quot;EmailMessageServices&quot;. It is specifically used in the Update Queue Owner WF rule, which is then used in Apex. This field is used when a customer replies back to a case but the email they send to is not billing, or collections. If a customer replies to a case and sends to an email that is not Billing or Collections, then assign to the latest Queue, and if no Queue assign to user.</description>
        <label>Latest Queue Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Sales Manager associated to the customer.</inlineHelpText>
        <label>Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Social Care: field to indicate if a social customer care agent would like a post manually reviewed and approved by an agent before it&apos;s posted</description>
        <label>Manual Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Code__c</fullName>
        <label>Marketing Code</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes_Since_Created__c</fullName>
        <formula>(NOW() -  CreatedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes Since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Converted_To_Sale_Reason__c</fullName>
        <inlineHelpText>Please describe the reason you did not convert this new course registration call to a sale.</inlineHelpText>
        <label>Not Converted To Sale Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>The number of students indicated on the invoice in question.</inlineHelpText>
        <label>Current # of Students</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_ID__c</fullName>
        <label>Offering ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Sub_Status__c</fullName>
        <inlineHelpText>On-Hold Sub-Status</inlineHelpText>
        <label>On-Hold Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not on Hold</fullName>
                </value>
                <value>
                    <fullName>On Hold - Requested Additional Information from the Customer</fullName>
                </value>
                <value>
                    <fullName>On Hold - Insufficient Payment</fullName>
                </value>
                <value>
                    <fullName>On Hold - Purchase Order Issue</fullName>
                </value>
                <value>
                    <fullName>On Hold - Course Record Discrepancy</fullName>
                </value>
                <value>
                    <fullName>On Hold - PRT Escalation</fullName>
                </value>
                <value>
                    <fullName>On Hold - ITSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenedDate__c</fullName>
        <formula>VALUE(CASE(MONTH(DATEVALUE(CreatedDate)), 
1, &quot;31&quot;, 
2, &quot;28&quot;, 
3, &quot;30&quot;, 
4, &quot;30&quot;, 
5, &quot;31&quot;, 
6, &quot;30&quot;, 
7, &quot;31&quot;, 
8, &quot;31&quot;, 
9, &quot;30&quot;, 
10, &quot;31&quot;, 
11, &quot;30&quot;, 
12, &quot;31&quot;, &quot;None&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpenedDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenedMonth__c</fullName>
        <formula>VALUE( CASE( MONTH( DATEVALUE( CreatedDate )) , 
1, &quot;1&quot;, 
2, &quot;2&quot;, 
3, &quot;3&quot;, 
4, &quot;4&quot;, 
5, &quot;5&quot;, 
6, &quot;6&quot;, 
7, &quot;7&quot;, 
8, &quot;8&quot;, 
9, &quot;9&quot;, 
10, &quot;10&quot;, 
11, &quot;11&quot;, 
12, &quot;12&quot;, &quot;None&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpenedMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>To be used in Service Cases with Type Invoicing (LMS)</description>
        <inlineHelpText>Insert Order # associated with inquiry as listed on invoice (Training or RCS).</inlineHelpText>
        <label>Order #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originated_as_Collection_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if case originated during a collections call.</inlineHelpText>
        <label>Originated as Collection Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Action_Taken__c</fullName>
        <inlineHelpText>Required when Action Taken field = Other.</inlineHelpText>
        <label>Other Action Taken</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Products__c</fullName>
        <label>Other Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Root_Cause__c</fullName>
        <description>Invoicing Cases</description>
        <label>Other Root Cause</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHSS_Filter_for_time_closed__c</fullName>
        <formula>ClosedDate &gt;= (NOW() - 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases Closed in the last 30 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_End_Date__c</fullName>
        <label>PO End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Reject_Reason__c</fullName>
        <description>Related RCS PO rejected cases</description>
        <label>RCS PO Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Close_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unpaid AR over 90 days past due</fullName>
                </value>
                <value>
                    <fullName>High Risk Credit Rating</fullName>
                </value>
                <value>
                    <fullName>Incomplete Information</fullName>
                </value>
                <value>
                    <fullName>Terminated Invoicing due to Non-payment of training or RCS invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Start_Date__c</fullName>
        <label>PO Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Custom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field was created due to the lack of reporting with the standard Case Hierarchy reporting. This field now allows for reporting on all parent field values as opposed to the Standard Parent Field which allows reporting on only the Parent Field value.</description>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Related_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Cur__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Enter total amount of payments submitted for listed Invoice #s/payments.</inlineHelpText>
        <label>Payment Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Select date the payment was submitted (per customer or on check copy).</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Sent_To_Address__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Per customer, address to where payment was submitted.</inlineHelpText>
        <label>Payment Sent to Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Sent_To_Stat__c</fullName>
        <label>Payment Sent to State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Sent_To_State__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Per customer, state where the payment was submitted.</inlineHelpText>
        <label>Payment Sent to State (old)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Sent_to_State_New__c</fullName>
        <inlineHelpText>Enter State where the payment was submitted.</inlineHelpText>
        <label>Payment Sent to State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <inlineHelpText>Select new Payment Terms.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number_of_Ghost_Call__c</fullName>
        <description>This field is only populated for cases that were created as a consequence of pressing the &quot;Log Ghost Call&quot; button on the &quot;Search for Customer Contact&quot; page.</description>
        <label>Phone Number of Ghost Call</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Location__c</fullName>
        <label>Preferred Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Within 10 miles</fullName>
                </value>
                <value>
                    <fullName>Within 25 miles</fullName>
                </value>
                <value>
                    <fullName>Within 50 miles</fullName>
                </value>
                <value>
                    <fullName>Over 50 miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_per_Student__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Amount per student on the invoice in question.</inlineHelpText>
        <label>Current Price per Student</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Close_Reason__c</fullName>
        <description>Indicates the initial resolution of the case.</description>
        <inlineHelpText>What is the main reason for closing the case?</inlineHelpText>
        <label>Primary Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Processed</fullName>
                </value>
                <value>
                    <fullName>Customer Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Did Not Register in New Course</fullName>
                </value>
                <value>
                    <fullName>Did Not Reschedule / Did Not Save Customer</fullName>
                </value>
                <value>
                    <fullName>Invoice Accurate - No Actual Dispute</fullName>
                </value>
                <value>
                    <fullName>Invoice Privileges Request</fullName>
                </value>
                <value>
                    <fullName>Issue Resolved</fullName>
                </value>
                <value>
                    <fullName>Opted for AP Class Listed on RCO</fullName>
                </value>
                <value>
                    <fullName>Payment Processed</fullName>
                </value>
                <value>
                    <fullName>Referred to Website</fullName>
                </value>
                <value>
                    <fullName>Registered in New Course</fullName>
                </value>
                <value>
                    <fullName>Rescheduled in New Course / Saved Customer</fullName>
                </value>
                <value>
                    <fullName>Submitted OTC Referral Form</fullName>
                </value>
                <value>
                    <fullName>Successful Warm Transfer</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful Warm Transfer</fullName>
                </value>
                <value>
                    <fullName>Work Completed</fullName>
                </value>
                <value>
                    <fullName>Successful transfer or save</fullName>
                </value>
                <value>
                    <fullName>Submitted OTC Referral or referral to field</fullName>
                </value>
                <value>
                    <fullName>Retail Order – New</fullName>
                </value>
                <value>
                    <fullName>Retail Order – Replacement</fullName>
                </value>
                <value>
                    <fullName>Retail Order – Did not buy</fullName>
                </value>
                <value>
                    <fullName>Canceled Retail Order</fullName>
                </value>
                <value>
                    <fullName>Canceled Retail Item</fullName>
                </value>
                <value>
                    <fullName>Tracking provided</fullName>
                </value>
                <value>
                    <fullName>Order Pending</fullName>
                </value>
                <value>
                    <fullName>Order on Hold</fullName>
                </value>
                <value>
                    <fullName>Back-Order</fullName>
                </value>
                <value>
                    <fullName>Status of Return</fullName>
                </value>
                <value>
                    <fullName>Referred to Form on Website</fullName>
                </value>
                <value>
                    <fullName>Reviewed process for return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Reason_for_Update__c</fullName>
        <label>Primary Reason for Update</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ARC cancelled course</fullName>
                </value>
                <value>
                    <fullName>Personal schedule conflict</fullName>
                </value>
                <value>
                    <fullName>Signed up for wrong course</fullName>
                </value>
                <value>
                    <fullName>Found lower price with competitor</fullName>
                </value>
                <value>
                    <fullName>Found better time with competitor</fullName>
                </value>
                <value>
                    <fullName>Certification No Longer Required</fullName>
                </value>
                <value>
                    <fullName>Found better location</fullName>
                </value>
                <value>
                    <fullName>Found better time</fullName>
                </value>
                <value>
                    <fullName>Prefer different course</fullName>
                </value>
                <value>
                    <fullName>Prefer to attend w/someone else</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Flag__c</fullName>
        <formula>IMAGE( 
CASE( Priority, 
&quot;Low&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;High&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Critical&quot;, &quot;/servlet/servlet.ImageServer?id=015d00000005ykO&amp;oid=00D0R0000009RRi&amp;lastMod=1372486862000&quot;,
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <label>Priority Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Order__c</fullName>
        <formula>IF( 
ISPICKVAL(Priority, &quot;High&quot;), 1, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALS/PALS</fullName>
                </value>
                <value>
                    <fullName>Babysitting</fullName>
                </value>
                <value>
                    <fullName>BLS</fullName>
                </value>
                <value>
                    <fullName>CPR for the Professional Rescuer</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Response</fullName>
                </value>
                <value>
                    <fullName>First Aid/CPR/AED</fullName>
                </value>
                <value>
                    <fullName>Lifeguarding</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Safety Training for Swim Coaches</fullName>
                </value>
                <value>
                    <fullName>Swimming and Water Safety/Learn to Swim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_Of_Payment_Attached__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Indicate if proof of payment is attached to case.</inlineHelpText>
        <label>Proof Of Payment Attached</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Dispute_Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aquatics</fullName>
                </value>
                <value>
                    <fullName>Blended Learning</fullName>
                </value>
                <value>
                    <fullName>Certificates</fullName>
                </value>
                <value>
                    <fullName>Concerns/Kuddos</fullName>
                </value>
                <value>
                    <fullName>First Aid and CPR</fullName>
                </value>
                <value>
                    <fullName>Instructor Certification</fullName>
                </value>
                <value>
                    <fullName>Online Completion Report and Roster</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Submission of Class Paperwork</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quick_Start_Progress__c</fullName>
        <label>Quick Start Progress</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tertiary_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>14 Day Reminder sent</fullName>
                </value>
                <value>
                    <fullName>21 Day Reminder sent</fullName>
                </value>
                <value>
                    <fullName>7-Day Extension Granted</fullName>
                </value>
                <value>
                    <fullName>Additional Requirements Needed</fullName>
                </value>
                <value>
                    <fullName>Guidelines sent</fullName>
                </value>
                <value>
                    <fullName>Quick Start Completed</fullName>
                </value>
                <value>
                    <fullName>Quick Start Not Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Proof of Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCO_Order__c</fullName>
        <description>RSG will begin registering learners who are interested in Blended Learning classes on RCO rather than in LMS. In order to track conversion rates and commissions for these agents will need a new field created where agents can enter an RCO order number.</description>
        <label>RCO Order #</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCS_Email__c</fullName>
        <inlineHelpText>RCS ONLY: Enter new RCS Login Email.</inlineHelpText>
        <label>Red Cross Store Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RCS_Order_Number_1__c</fullName>
        <label>RCS Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCS_Order_Number__c</fullName>
        <label>RCS Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCS_PO_Amount__c</fullName>
        <inlineHelpText>RCS ONLY: Insert new RCS PO Amount Total.</inlineHelpText>
        <label>RCS PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RCS_PO_Expiry_Date__c</fullName>
        <inlineHelpText>RCS ONLY: Select new RCS PO Expiry Date.</inlineHelpText>
        <label>RCS PO Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCS_PO_Number__c</fullName>
        <inlineHelpText>RCS ONLY: Enter PO Number that needs update.</inlineHelpText>
        <label>RCS PO Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCS_PO_Start_Date__c</fullName>
        <inlineHelpText>RCS ONLY: Select new RCS PO Start Date.</inlineHelpText>
        <label>RCS PO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCS_Ship_To_Address__c</fullName>
        <inlineHelpText>RCS ONLY: Enter new RCS Ship to Address.</inlineHelpText>
        <label>RCS Ship To Address</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCS_Ship_To_Contact__c</fullName>
        <inlineHelpText>RCS ONLY: Enter new RCS Ship to Contact.</inlineHelpText>
        <label>RCS Ship To Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCS_Ship_To_Email__c</fullName>
        <inlineHelpText>RCS ONLY: Enter new RCS Ship to Email.</inlineHelpText>
        <label>RCS Ship To Email</label>
        <type>Email</type>
    </fields>
</CustomObject>